Finished Section Hiding, LaTeX Parsing, etc
* YOPP
YOPP stands for "YOPP Org-mode PHP Parser".  This project was started to
allow dynamic generation of HTML5/CSS3 files on the fly.  The final goal
of this project is to be able to conveniently write blogs with
org-mode.Here are some of the major new features that are implemented
today.
** DONE Section Hiding
Clicking on the header will hide the section under the header. The
currently algorithm uses a *stack* approach to balance out the tags. A
keyboard shortcut may be implemented in the future.
** DONE LaTeX Export
Using symbols such as =\(= and =\)= or =$$= and =$$= will interpret the
content inside these tags as LaTeX formula.
*For example:*
When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and
they are
$$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
** DONE Intermediate Formatting
Using formatters such as =*=, =/=, and =+= will change the formatting.
*For Example:*
=*example*= will yield *example*.
=/example/= will yield /example/.
=+example+= will yield +example+
Many for the characters will be replaced by glyphs such as "double
quotes" and 'single quotes.' The characters in =<code>= tags, within
LaTeX operators, and within a URL are then converted back to their
"unglyphed" forms.
** STARTED List Handling
List items are started by starting a new line with =-=. Indenting the
list will create sublist or nested list.

--- a/test.org
+++ b/test.org
@@ -1,8 +1,10 @@
 
-* TODO Header 1-1                     :another tag:more tags:last tag:
+* TODO Header 1-1			     :another_tag:more_tags:last_tag:
+SCHEDULED: <2012-05-23 Wed> DEADLINE: <2012-05-23 Wed>
 Content of Header 1
 ** WAITING Header 2-2
 Content of Header 2
+
 asdfop
 kaosdkf
 poaksf
@@ -10,7 +12,7 @@ ok
 poksdfpokpksdafpoks
 *** STARTED Header 3-3
 Content of Header 3-3
-** DONE Header 2-4                          :noexport:
+** DONE Header 2-4						   :noexport:
 Content of Header 2-4
 *** Header 3-5
 Content of Header 3-5
@@ -18,9 +20,10 @@ Content of Header 3-5
 Content of Header 3-6
 * STARTED Header 1-7
 Content of Header 1-7
-** DONE Header 2-8                          :noexport:
+** DONE Header 2-8						   :noexport:
 Content of Header 2-8
 *** Header 3-9
 Content of Header 3-9
 *** Header 3-10
-Content of Header 3-10
+When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and they are
+$$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
